--- a/public/assets/scss/layout/pages/_others.scss
+++ b/public/assets/scss/layout/pages/_others.scss
@@ -3230,7 +3230,7 @@
 	}
 
 	@media #{$xs} {
-		grid-template-columns: 1fr;
+		grid-template-columns: repeat(2, 1fr);
 		gap: 16px;
 	}
 
